Fix all indentation / spelling errors

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
           <select class="form-control" id="moneyTypes">
             <option>--</option>
             <option>AED</option>
-            <option>*</option>
+            <option>CAD</option>
+            <option>EUR</option>
+            <option>MXN</option>
+            <option>CNY</option>
           </select>
         </div>
       <button class="btn-success" id="US-converter">Convert Currency</button>
